--- a/styles.css
+++ b/styles.css
@@ -12,11 +12,11 @@ body {
 }
 
 .square-txt {
-  top: 95%;
-  left: 74%;
+  top: 815px;
+  left: 1130px;
 }
 
 .star-txt {
-  top: 154%;
-  left: 65%;
+  top: 1070px;
+  left: 970px;
 }
